# player

./: AUTHORS  CMakeLists.txt  CMake_README.txt  CMake_Todo.txt  CONTRIBUTING.md  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.common  Makefile.doc  PORTSTATUS  PlayerCPackOptions.cmake.in  README  README.java  README.md  TODO  VERSION  acinclude.m4  bootstrap  bootstrap_osx  build.ipaq  config.h.cmake  config.h.in  config.p2os  config.simulation  config.trogdor  configure.ac  configure.in  copyright_header  copyright_header.examples  copyright_header.lib  distro.sh  mkacinclude.sh  playerconf  playerconfig.h.in  upload_doc.sh  win32_todo.txt
client_libs/c/: .cvsignore  Makefile  (+6 more)
client_libs/c++/: .cvsignore  Makefile  Makefile.am  actarrayproxy.cc  aioproxy.cc  audiodspproxy.cc  audiomixerproxy.cc  audioproxy.cc  blinkenlightproxy.cc  blobfinderproxy.cc  bpsproxy.cc  bpsproxy.h  broadcastproxy.cc  broadcastproxy.h  bumperproxy.cc  bumperproxy.h  cameraproxy.cc  clientproxy.cc  clientproxy.h  commsproxy.cc  descartesproxy.cc  descartesproxy.h  devicedatatable.cc  devicedatatable.h  dioproxy.cc  energyproxy.cc  fiducialproxy.cc  frfproxy.cc  gpsproxy.cc  gpsproxy.h  gripperproxy.cc  gripperproxy.h  hudproxy.cc  idarproxy.cc  idarproxy.h  idarturretproxy.cc  idarturretproxy.h  irproxy.cc  laserbeaconproxy.cc  laserbeaconproxy.h  (+59 more)
cmake/: CMakeLists.txt  PlayerUtils.cmake  UsePlayerC++.cmake  UsePlayerC++.cmake.in  UsePlayerC.cmake  UsePlayerC.cmake.in  UsePlayerPlugin.cmake  UsePlayerPlugin.cmake.in  pkgconfig.cmake
config/: CMakeLists.txt  Makefile.am  afsm.cfg  afsm.eps  amigobot.cfg  amigobot_tcp.cfg  amtecM5.cfg  ant.pnm  ant2.pnm  b21r_rflex_lms200.cfg  bug.pnm  cvcam.cfg  dummy.cfg  erratic.cfg  gazebo.cfg  gazebo_blobfinder.cfg  gridmap.cfg  iwspy.cfg  joystick.cfg  jpegStream.cfg  kinect.cfg  mapfile.cfg  mbasedriver.cfg  nomad.cfg  nxt.cfg  obot.cfg  pioneer.cfg  player.h  readlog.cfg  regular_mcl.cfg  roomba.cfg  searchpattern.cfg  searchpattern_symbols.ps  segwayrmp.cfg  shapeTracker.cfg  sphere.cfg  stage.cfg  stage1p4_swarmbot.cfg  stage1p4_swarmbot.world  stage1p4_test.cfg  (+19 more)
doc/: .cvsignore  CMakeLists.txt  Makefile  Makefile.am  architecture.txt  classes.html  clients.html  configfile.html  footer.html  header.html  install.html  install.txt  mainpage.html  migration.html  player.dox  player.dox.in  player.ps  player.txt  playerlayout.xml  playerstyle.css  playerweb.dox  plugin_driver.html  protocol.html  quick_start.txt  supported_hardware.txt  tutorial_automake.txt  tutorial_cameras.txt  tutorial_cmake.txt  tutorial_config.txt  tutorial_crosscompiling.txt  tutorial_datalog.txt  tutorial_devices.txt  tutorial_interface.txt  tutorial_migration.txt  tutorial_plugins.txt  tutorial_runplayer.txt  tutorials.html  upload_www.sh  utils.html
examples/: CMakeLists.txt  Makefile  Makefile.am
libplayercommon/: CMakeLists.txt  error.c  error.h  playercommon.h
libplayercore/: .cvsignore  CMakeLists.txt  Makefile.am  addr_util.c  addr_util.h  configfile.cc  configfile.h  device.cc  device.h  devicetable.cc  devicetable.h  driver.cc  driver.h  drivertable.cc  drivertable.h  error.c  error.cc  error.h  filewatcher.cc  filewatcher.h  globals.cc  globals.h  interface_util.c  interface_util.cc  interface_util.h  message.cc  message.h  player.h  player_geos.h  playercommon.h  playerconfig.h  playerconfig.h.in  playercore.h  playercore.pc.in  playererror.pc.in  playerinterfacegen.py  playertime.h  plugins.cc  plugins.h  property.cpp  (+6 more)
libplayerinterface/: CMakeLists.txt  addr_util.c  addr_util.h  error.c  functiontable.c  functiontable.h  interface_util.c  interface_util.h  player.h  playerinterfacegen.py  playerxdr.html  playerxdrgen.py
libplayerjpeg/: CMakeLists.txt  Makefile.am  playerjpeg.c  playerjpeg.h
libplayersd/: .cvsignore  CMakeLists.txt  Makefile.am  playersd.c  playersd.h  playersd.pc.in  playersd_mdns.c
libplayertcp/: .cvsignore  CMakeLists.txt  Makefile.am  playertcp.cc  playertcp.h  playertcp.pc.in  playertcp_errutils.h  playerudp.cc  playerudp.h  playerudp.pc.in  remote_driver.cc  remote_driver.h  socket_util.c  socket_util.h  tcpremote_driver.cc  tcpremote_driver.h
libplayerwkb/: CMakeLists.txt  playerwkb.c  playerwkb.h
libplayerxdr/: .cvsignore  CMakeLists.txt  Makefile.am  functiontable.c  functiontable.h  parse.py  playerxdr.html  playerxdr.pc.in  playerxdrgen.py
replace/: CMakeLists.txt  Makefile.am  alphasort.c  cfmakeraw.c  clock_gettime.c  compressBound.c  dirname.c  getopt.c  gettimeofday.c  nanosleep.c  poll.c  replace.h  round.c  scandir.c  usleep.c  xdr.c  xdr_array.c  xdr_float.c  xdr_intXX_t.c  xdr_mem.c  xdr_sizeof.c
rtk2/: .cvsignore  CMakeLists.txt  rtk.c  rtk.h  rtk_canvas.c  rtk_canvas_movie.c  rtk_fig.c  rtk_menu.c  rtk_region.c  rtk_table.c  rtkprivate.h
server/: .cvsignore  CMakeLists.txt  Makefile.am  clientdata.cc  clientdata.h  clientmanager.cc  clientmanager.h  configfile.cc  configfile.h  defaults.h  device.cc  device.h  deviceentry.cc  deviceentry.h  deviceregistry.cc  deviceregistry.h  devicetable.cc  devicetable.h  driver.cc  driver.h  driverregistry.cc  driverregistry.h  drivertable.cc  drivertable.h  error.cc  error.h  main.cc  message.cc  message.h  messages.h  player.h  player.pc.in  playercommon.h  playercommon.h.in  playerconfig.h.in  playerqueue.cc  playerqueue.h  poll.c  poll.h  replace.h  (+10 more)
src/: Makefile  Makefile.am  Player  arenalaserdevice.cc  arenalock.cc  arenapositiondevice.cc  arenaptzdevice.cc  arenasonardevice.cc  arenavisiondevice.cc  audiodevice.cc  bpsdevice.cc  broadcastdevice.cc  clientdata.cc  clientmanager.cc  configfile.cc  device.cc  deviceregistry.cc  devicetable.cc  gripperdevice.cc  laserbeacondevice.cc  laserdevice.cc  lock.cc  main.cc  miscdevice.cc  nodevice.cc  p2osdevice.cc  packet.cc  playerqueue.cc  positiondevice.cc  ptzdevice.cc  pubsub_util.cc  robot_params.cc  rwi_bumperdevice.cc  rwi_laserdevice.cc  rwi_positiondevice.cc  rwi_powerdevice.cc  rwi_sonardevice.cc  rwidevice.cc  sip.cc  sonardevice.cc  (+4 more)
utils/: CMakeLists.txt  Makefile  Makefile.am  playerlog2carmenlog.py
(+2267 files in other folders)
